fix: login player, admin
